# Project-Manager-Assistant-Chatbot

./: README.md  backend.py  frontend_V1_rev3.py  pyproject.toml
